template is added.style is fine.

--- a/Auth/templates/Auth/password_reset_complete.html
+++ b/Auth/templates/Auth/password_reset_complete.html
@@ -10,6 +10,6 @@
     <div class="alert alert-info">
         Your password has been set.
     </div>
-    <!-- <a href='google.com'">Sign In </a> -->
+    <!-- <a href='google.com'">Sign In Here! </a> -->
 </body>
 </html>
