Added an email for submitting comment.Tested.

--- a/Barber/templates/emails/add_comment_email.html
+++ b/Barber/templates/emails/add_comment_email.html
@@ -1,11 +1,9 @@
-{% block subject %} Ubtitled Team - Thanks for leaving comment.{% endblock subject %}
+{% block subject %} Ubtitled Team - leaving comment{% endblock subject %}
 
 {% block html_body %}
 <h1>
-    <!-- Hi {{name}}, this is an email from Untitled Team. ☺    -->
-    hi
+    Dear {{name}}, this is an email from Untitled Team. ☺ 
 </h1>
-<br>
 <h2>
     You have recently added a comment on our platform.
     we're glad to providing you services. 😘
