added an email for submitting reply.

--- a/Barber/templates/emails/reply_comment_email.html
+++ b/Barber/templates/emails/reply_comment_email.html
@@ -1,11 +1,11 @@
-{% block subject %} Ubtitled Team - Submitted a comment{% endblock subject %}
+{% block subject %} Ubtitled Team - recieved a reply{% endblock subject %}
 
 {% block html_body %}
 <h1>
     Dear {{name}}, this is an email from Untitled Team. ☺ 
 </h1>
 <h2>
-    You have recently added a comment on our platform.
+    You have recieved a reply. 
     we're glad to providing you services. 😘
 </h2>
 
